--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -29,7 +29,8 @@
                 <SurfaceView
                     android:id="@+id/camerapreview"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
 
                 <Button
                     android:id="@+id/takepicture"
@@ -38,8 +39,34 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:text="Scan " />
+
+                <Button
+                    android:id="@+id/camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:drawableLeft="@drawable/ic_scan"
+                    android:drawablePadding="5dp"
+                    android:text="Camera " />
+
+                <LinearLayout
+                    android:id="@+id/ll"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/bg_transparent"
+                    android:orientation="horizontal" />
+
             </RelativeLayout>
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:visibility="gone" />
 
 
         <LinearLayout
