--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.loyaltyapp.co.example.loyaltyapp.activity.Login"
     tools:showIn="@layout/activity_login">
 
     <RelativeLayout
@@ -14,11 +13,18 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/bajajlogo" />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/re_logo" />
+
+        <ImageView
+            android:id="@+id/logoRe"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_margin="10dp"
+            android:src="@drawable/gen_part" />
 
 
         <RelativeLayout
@@ -33,37 +39,38 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="Please Enter Registered Mobile Number"
-                android:textStyle="bold"
                 android:textColor="@color/colorAccent"
-                />
+                android:textStyle="bold" />
 
 
-            <RadioGroup android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <RadioGroup
                 android:id="@+id/radiogrp"
-                android:orientation="horizontal"
-                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/text4"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                >
-                <RadioButton android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Retailer"
-                    android:padding="5dp"
-                    android:id="@+id/retailorradio"
-                    android:textColor="@color/colorAccent"
-                    />
+                android:orientation="horizontal">
 
-                <RadioButton android:layout_width="wrap_content"
+                <RadioButton
+                    android:id="@+id/retailorradio"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Member"
-                    android:textColor="@color/colorAccent"
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/memberradio"
                     android:padding="5dp"
-                    />
+                    android:text="Retailer"
+                    android:textColor="@color/colorAccent" />
+
+                <RadioButton
+                    android:id="@+id/memberradio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:padding="5dp"
+                    android:text="Member"
+                    android:textColor="@color/colorAccent" />
 
             </RadioGroup>
+
             <ImageView
                 android:id="@+id/countryIndia"
                 android:layout_width="40dp"
@@ -98,8 +105,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-           >
+            android:layout_centerHorizontal="true">
 
             <Button
                 android:id="@+id/getOtp"
