--- a/app/src/main/res/layout/redeemdialog.xml
+++ b/app/src/main/res/layout/redeemdialog.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/transparent"
-    >
+    android:background="@android:color/transparent">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#ffffff"
-        >
+        app:cardBackgroundColor="#ffffff">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            >
-
-
-
+            android:layout_height="wrap_content">
 
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-
-                android:layout_below="@+id/relFirst">
+                android:layout_below="@+id/relFirst"
+                android:layout_marginTop="5dp">
 
                 <ImageView
+                    android:id="@+id/logo"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:id="@+id/logo"
                     android:layout_margin="5dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/bajajlogo"/>
+                    android:src="@drawable/re_logo" />
+
+
+                <ImageView
+                    android:id="@+id/logoRe"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_margin="5dp"
+                    android:src="@drawable/gen_part" />
 
 
                 <View
@@ -46,47 +47,47 @@
                     android:background="#2f2f2f"></View>
 
                 <TextView
+                    android:id="@+id/redeemtext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/redeemtext"
-                    android:layout_margin="5dp"
+                    android:layout_below="@id/view1"
                     android:layout_centerHorizontal="true"
+                    android:layout_margin="5dp"
                     android:text="Are You Sure You Want to Redeem"
-                    android:textStyle="bold"
                     android:textColor="@color/colorAccent"
                     android:textSize="16sp"
-                    android:layout_below="@id/view1"
-                    />
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:padding="10dp"
                     android:layout_below="@+id/redeemtext"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:padding="10dp"
+                    android:weightSum="2">
+
                     <TextView
+                        android:id="@+id/cancelredeem"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/cancelredeem"
-                        android:textSize="16dp"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:text="Cancel"
                         android:textColor="#F54119"
-                        android:text="Cancel"/>
+                        android:textSize="16dp" />
 
 
                     <TextView
+                        android:id="@+id/confirmredeem"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/confirmredeem"
-                        android:textSize="16dp"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="Confirm"
-                        android:textStyle="bold"
-                        android:textColor="#008000"/>
+                        android:textColor="#008000"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
