--- a/app/src/main/res/layout/row_multiphoto_item.xml
+++ b/app/src/main/res/layout/row_multiphoto_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:src="@drawable/bajajlogo" />
+        android:src="@drawable/rewards" />
 
     <CheckBox
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorAccent"
+        android:layout_alignBottom="@+id/imageView1"
         android:layout_alignRight="@+id/imageView1"
-        android:layout_alignBottom="@+id/imageView1"/>
+        android:backgroundTint="@color/colorAccent" />
 
 </RelativeLayout>	
